--- a/autoencoder.ipynb
+++ b/autoencoder.ipynb
@@ -1124,7 +1124,8 @@
         "                      metrics=['accuracy', krs.metrics.Precision(), krs.metrics.Recall()])\n",
         "classificator.fit(x = out_vec_save, y = all_out, batch_size = 8000 ,epochs = ep * 2)\n",
         "test_out_vec = encoder.predict(numpy.expand_dims((testx/255.0-0.5)*1.999, axis=3))\n",
-        "predictions = classificator.predict(test_out_vec)"
+        "predictions = classificator.predict(test_out_vec)\n",
+        "classificator.save('classificator_model.h5')"
       ],
       "metadata": {
         "id": "MlvPD8GeDjd-",
