cell params fix

--- a/autoencoder.ipynb
+++ b/autoencoder.ipynb
@@ -1077,10 +1077,8 @@
     "# добавляем дополнительное измерение соответствующее одной цветовой карте\n",
     "all_image = numpy.expand_dims(all_image, axis=3)\n",
     "\n",
-    "num_classes = 10\n",
-    "num_hide = 98\n",
     "out_vec_save = encoder.predict(all_image)\n",
-    "ep = 40 "
+    "all_out = krs.utils.to_categorical(trainy)"
    ],
    "metadata": {
     "id": "gHBRLjvKxyAb"
@@ -1092,12 +1090,13 @@
    "cell_type": "code",
    "source": [
     "'''Влад, придумай нормальный метод работы с классификатором'''\n",
-    "all_out = krs.utils.to_categorical(trainy)\n",
     "\n",
     "num_classes = 10\n",
+    "num_hide = 98\n",
     "n_count = 128\n",
     "dropout= 0.2\n",
     "activation = 'relu'\n",
+    "ep = 40 \n",
     "\n",
     "classifier_input = krs.layers.Input(shape=(num_hide,))\n",
     "encoder.trainable = False\n",
@@ -1116,10 +1115,11 @@
     "classifier_output = krs.layers.Dense(num_classes, activation=\"softmax\", name='den4')(lay)\n",
     "print('Shape of classifier_output:', classifier_output.shape)\n",
     "classificator = krs.Model(classifier_input, classifier_output)\n",
+    "\n",
     "classificator.compile(loss='binary_crossentropy', optimizer=krs.optimizers.Adam(learning_rate = 0.0002),\n",
     "                      metrics=['accuracy', krs.metrics.Precision(), krs.metrics.Recall()])\n",
-    "\n",
     "classificator.fit(x = out_vec_save, y = all_out, batch_size = 8000 ,epochs = ep * 2)\n",
+    "\n",
     "test_out_vec = encoder.predict(numpy.expand_dims((testx/255.0-0.5)*1.999, axis=3))\n",
     "predictions = classificator.predict(test_out_vec)\n",
     "\n",
