fix bug with rgb!

--- a/Timofey_Encode_class.ipynb
+++ b/Timofey_Encode_class.ipynb
@@ -62,7 +62,9 @@
         "    for i in range(height):\n",
         "        for j in range(width):\n",
         "            r, g, b = arr[i, j]\n",
-        "            aver_rgb_sum += r + g + b\n",
+        "            aver_rgb_sum += r\n",
+        "            aver_rgb_sum += g\n",
+        "            aver_rgb_sum += b\n",
         "\n",
         "    aver_rgb_sum /= height * width * 3\n",
         "    color_tolerance = aver_rgb_sum\n",
